--- a/Cropper/pom.xml
+++ b/Cropper/pom.xml
@@ -2,19 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
  
-    <parent>
+ 	<parent>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>14.0.0</version>
+		<relativePath />
+	</parent>
+ 
+	<!-- <parent>
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-fiji</artifactId>
 		<version>17.0.0</version>
 		<relativePath />
-	</parent>
+	</parent> -->    
  
  	<artifactId>MotiQ_Cropper</artifactId>
     <version>0.1.1-SNAPSHOT</version>
  
-<!-- TODO: Fill out these sections -->
-    <name>MotiQ/MotiQ_Cropper.jar</name>
-    <description></description>
+<!-- Plugin Information -->
+    <name>MotiQ Cropper</name>
+	<description>Aids in the selection of 2D or 3D, time-lapse or non-time-lapse regions in image stacks.</description>
+	<url></url>
+	<inceptionYear>2014</inceptionYear>
+	<organization>
+		<name></name>
+		<url></url>
+	</organization>
+	<licenses>
+		<license>
+			<name>GNU General Public License v3+</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
  
     <developers>
         <developer>
@@ -44,19 +64,29 @@
         <contributor><name>None</name></contributor>
     </contributors>
  	
+ 	<scm>
+		<connection>scm:git:git://github.com/hansenjn/MotiQ</connection>
+		<developerConnection>scm:git:git@github.com:hansenjn/MotiQ</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/imagej/example-legacy-plugin</url>
+	</scm>
+ 	
+ 	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/hansenjn/MotiQ/issues</url>
+	</issueManagement>
+ 	
  	<properties>
 		<main-class>Cropper</main-class>
 	</properties>
  	
  	<repositories>
-        <!-- NB: for project parent, in case of partial checkout -->
         <repository>
             <id>imagej.public</id>
             <url>http://maven.imagej.net/content/groups/public</url>
         </repository>
     </repositories>
  
-<!-- TODO: See Optional Dependencies section -->
     <dependencies>
         <!-- ImageJ dependencies -->
         <dependency>
@@ -84,5 +114,5 @@
 			</plugin>
 		</plugins>
 	</build>
-    <groupId>MotiQ</groupId>
+    <groupId>JNH</groupId>
 </project>
