--- a/3D Analyzer/pom.xml
+++ b/3D Analyzer/pom.xml
@@ -18,7 +18,7 @@
  
  	<artifactId>MotiQ_3D</artifactId>
  	<groupId>JNH</groupId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.5-SNAPSHOT</version>
  
 <!-- Plugin Information -->
     <name>MotiQ 3D Analyzer</name>
@@ -42,10 +42,10 @@
         <developer>
             <id></id>
             <name>Jan Niklas Hansen</name>
-            <email>jan.hansen@caesar.de</email>
+            <email>jan.hansen@uni-bonn.de</email>
             <url>r</url>
             <organization></organization>
-            <organizationUrl></organizationUrl>
+            <organizationUrl>https://github.com/hansenjn</organizationUrl>
             <roles>
                 <role>founder</role>
                 <role>lead</role>
@@ -112,21 +112,30 @@
             <groupId>net.imagej</groupId>
             <artifactId>ij</artifactId>
         </dependency>        
-        <dependency>
-            <groupId>sc.fiji</groupId>
-  			<artifactId>AnalyzeSkeleton_</artifactId>
-        </dependency>	
-        <dependency>
-            <groupId>sc.fiji</groupId>
-  			<artifactId>Skeletonize3D_</artifactId>
-        </dependency>	
+<!--         <dependency> -->
+<!--             <groupId>sc.fiji</groupId> -->
+<!--   			<artifactId>AnalyzeSkeleton_</artifactId> -->
+<!--         </dependency>	 -->
+<!--         <dependency> -->
+<!--             <groupId>sc.fiji</groupId> -->
+<!--   			<artifactId>Skeletonize3D_</artifactId> -->
+<!--         </dependency>	 -->
     </dependencies>  
     
     <build>
         <directory>target</directory>
     	<outputDirectory>target/classes</outputDirectory>
-    	<finalName>${artifactId}-${version}</finalName>
+    	<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
+			<!--         avoid errors in java doc creation -->			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
