--- a/3D Analyzer/pom.xml
+++ b/3D Analyzer/pom.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-  
-<!-- 	<parent> -->
-<!-- 		<groupId>org.scijava</groupId> -->
-<!-- 		<artifactId>pom-scijava</artifactId> -->
-<!-- 		<version>14.0.0</version> -->
-<!-- 		<relativePath /> -->
-<!-- 	</parent> -->
- 
-	<parent>
-		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>17.0.0</version>
-		<relativePath />
-	</parent> 
+  	<parent>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>17.1.1</version>
+		<relativePath/>
+	</parent>
  
  	<artifactId>MotiQ_3D</artifactId>
  	<groupId>JNH</groupId>
-    <version>0.1.5-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
  
 <!-- Plugin Information -->
     <name>MotiQ 3D Analyzer</name>
-    <description>A quantification tool for objects in 3D image (time-lapse or non-time-lapse).</description>
+    <description>A quantification tool for objects in 3D images (time-lapse or non-time-lapse).</description>
  	<url>https://github.com/hansenjn/MotiQ</url>
 	<inceptionYear>2014</inceptionYear>
 	<organization>
@@ -74,12 +66,12 @@
 		</mailingList>
 	</mailingLists>
  	
-<!--  	<scm> -->
-<!-- 		<connection>scm:git:git://github.com/hansenjn/MotiQ/3D Analyzer</connection> -->
-<!-- 		<developerConnection>scm:git:git@github.com:hansenjn/MotiQ/3D Analyzer</developerConnection> -->
-<!-- 		<tag>HEAD</tag> -->
-<!-- 		<url>https://github.com/hansenjn/MotiQ/3D Analyzer</url> -->
-<!-- 	</scm> -->
+ 	<scm>
+		<connection>scm:git:git://github.com/hansenjn/MotiQ/3D Analyzer/</connection>
+		<developerConnection>scm:git:git@github.com:hansenjn/MotiQ/3D Analyzer/</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/hansenjn/MotiQ/3D Analyzer/</url>
+	</scm>
  	
  	<issueManagement>
 		<system>GitHub Issues</system>
@@ -97,15 +89,7 @@
 		<license.copyrightOwners>Jan Niklas Hansen.</license.copyrightOwners>
 		<license.projectName>MotiQ_3D_analyzer plugin for ImageJ.</license.projectName>
 	</properties>
- 	
- 	<repositories>
-    	<repository>
-            <id>imagej.public</id>
-            <url>http://maven.imagej.net/content/groups/public</url>
-        </repository>
-    </repositories>
- 
-<!-- TODO: See Optional Dependencies section -->
+	
     <dependencies>
         <!-- ImageJ dependencies -->
         <dependency>
