--- a/Thresholder/pom.xml
+++ b/Thresholder/pom.xml
@@ -5,20 +5,13 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>14.0.0</version>
+		<version>17.1.1</version>
 		<relativePath />
 	</parent>
  
-	<!-- <parent>
-		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>17.0.0</version>
-		<relativePath />
-	</parent> --> 
- 
  	<artifactId>MotiQ_Thresholder</artifactId>
  	<groupId>JNH</groupId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.1.3-SNAPSHOT</version>
  
  <!-- Plugin Information -->
  	<name>MotiQ thresholder</name>
@@ -42,10 +35,10 @@
         <developer>
             <id></id>
             <name>Jan Niklas Hansen</name>
-            <email>jan.hansen@caesar.de</email>
-            <url>r</url>
-            <organization>caesar</organization>
-            <organizationUrl>http://www.caesar.de/</organizationUrl>
+            <email>jan.hansen@uni-bonn.de</email>
+            <url>https://github.com/hansenjn</url>
+            <organization>JNH</organization>
+            <organizationUrl>https://github.com/hansenjn/</organizationUrl>
             <roles>
                 <role>founder</role>
                 <role>lead</role>
@@ -97,15 +90,8 @@
 		<license.copyrightOwners>Jan Niklas Hansen.</license.copyrightOwners>
 		<license.projectName>MotiQ_thresholder plugin for ImageJ.</license.projectName>
 	</properties>
- 	
-<!--  	<repositories> -->
-<!--     	<repository> -->
-<!--             <id>imagej.public</id> -->
-<!--             <url>http://maven.imagej.net/content/groups/public</url> -->
-<!--         </repository> -->
-<!--     </repositories> -->
- 
-   <dependencies>
+	
+	<dependencies>
         <!-- ImageJ dependencies -->
         <dependency>
             <groupId>net.imagej</groupId>
