Cosmetics in descriptions

--- a/Cropper/src/main/resources/plugins.config
+++ b/Cropper/src/main/resources/plugins.config
@@ -28,4 +28,4 @@
 # Date: 2017/05/03
 # Requires: ImageJ
 
-Plugins>MotiQ, "MotiQ Cropper v0.1.2", motiQ_cr.Cropper_
+Plugins>MotiQ, "MotiQ Cropper (v0.1.2)", motiQ_cr.Cropper_
