--- a/3D Analyzer/src/main/resources/plugins.config
+++ b/3D Analyzer/src/main/resources/plugins.config
@@ -2,7 +2,7 @@
 # #%L
 # MotiQ_3D plugin for ImageJ.
 # %%
-# Copyright (C) 2014-2017 Jan Niklas Hansen.
+# Copyright (C) 2014-2023 Jan N. Hansen.
 # %%
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -23,9 +23,9 @@
 
 # Belongs to the MotiQ toolbox for analyzing cellular morphology, dynamics, and signaling. MotiQ 3D analyzer analyzes segmented images that are either background-removed (in which intensity information in foreground pixels is preserved while the intensity of background pixels is set to zero) or binary images. After analysis, MotiQ 3D analyzer outputs a text-file containing many different parameter results and a set of images visualizing the results.
 
-# Author: Jan Niklas Hansen <Jan.Hansen@caesar.de>
-# Version: 0.1.3
+# Author: Jan N. Hansen <Jan.Hansen@uni-bonn.de>
+# Version: 0.2.0
 # Date: 2017/12/01
 # Requires: ImageJ
 
-Plugins>MotiQ, "MotiQ 3D Analyzer", motiQ3D.MotiQ_3D
+Plugins>MotiQ, "MotiQ 3D Analyzer (v0.2.0)", motiQ3D.MotiQ_3D
