--- a/2D Analyzer/src/main/resources/plugins.config
+++ b/2D Analyzer/src/main/resources/plugins.config
@@ -2,7 +2,7 @@
 # #%L
 # MotiQ_2D plugin for ImageJ.
 # %%
-# Copyright (C) 2014-2017 Jan Niklas Hansen.
+# Copyright (C) 2014-2023 Jan N. Hansen
 # %%
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -24,8 +24,8 @@
 # Belongs to the MotiQ toolbox for analyzing cellular morphology, dynamics, and signaling. MotiQ 2D analyzer analyzes segmented images that are either background-removed (in which intensity information in foreground pixels is preserved while the intensity of background pixels is set to zero) or binary images. After analysis, MotiQ 2D analyzer outputs a text-file containing many different parameter results and a set of images visualizing the results.
 
 # Author: Jan Niklas Hansen <Jan.Hansen@caesar.de>
-# Version: 0.1.2
+# Version: 0.1.4
 # Date: 2017/12/01
 # Requires: ImageJ
 
-Plugins>MotiQ, "MotiQ 2D Analyzer", motiQ2D.MotiQ_2D
+Plugins>MotiQ, "MotiQ 2D Analyzer (v0.1.4)", motiQ2D.MotiQ_2D
