--- a/Cropper/src/main/resources/plugins.config
+++ b/Cropper/src/main/resources/plugins.config
@@ -2,7 +2,7 @@
 # #%L
 # MotiQ_cropper plugin for ImageJ.
 # %%
-# Copyright (C) 2014-2023 Jan Niklas Hansen.
+# Copyright (C) 2014-2023 Jan N. Hansen.
 # %%
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -23,7 +23,7 @@
 
 # Belongs to the MotiQ toolbox for analyzing cellular morphology, dynamics, and signaling. MotiQ_cropper aids in deriving 2D or 3D regions from time-lapse or non-time-lapse image stacks. 
 
-# Author: Jan Niklas Hansen <Jan.Hansen@uni-bonn.de>
+# Author: Jan N. Hansen <Jan.Hansen@uni-bonn.de>
 # Version: 0.1.2
 # Date: 2017/05/03
 # Requires: ImageJ
