--- a/Thresholder/src/main/resources/plugins.config
+++ b/Thresholder/src/main/resources/plugins.config
@@ -2,7 +2,7 @@
 # #%L
 # MotiQ_thresholder plugin for ImageJ.
 # %%
-# Copyright (C) 2015-2022 Jan Niklas Hansen.
+# Copyright (C) 2015-2023 Jan N. Hansen.
 # %%
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -23,7 +23,7 @@
 
 # Belongs to the MotiQ toolbox for analyzing cellular morphology, dynamics, and signaling (https://github.com/hansenjn/MotiQ). MotiQ_thresholder is a automated thresholding tool for image stacks. MotiQ thresholder calculates a threshold in a separate reference image and applies it to the input image. The reference image is optionally processed by MotiQ thresholder prior to threshold calculation, whereby the image histogram used for threshold calculation can be improved.
 
-# Author: Jan Niklas Hansen <Jan.Hansen@uni-bonn.de>
+# Author: Jan N. Hansen <Jan.Hansen@uni-bonn.de>
 # Version: 0.1.3
 # Date: 2017/09/15
 # Requires: ImageJ
