--- a/2D Analyzer/pom.xml
+++ b/2D Analyzer/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-   
+	
     <parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
@@ -11,7 +11,7 @@
  
  	<artifactId>MotiQ_2D</artifactId>
  	<groupId>JNH</groupId>
-    <version>0.1.4-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
  
 <!-- Plugin Information -->
     <name>MotiQ 2D Analyzer</name>
@@ -68,10 +68,10 @@
 	</mailingLists>
  	
  	<scm>
-		<connection>scm:git:git://github.com/hansenjn/MotiQ/2D Analyzer/</connection>
-		<developerConnection>scm:git:git@github.com:hansenjn/MotiQ/2D Analyzer/</developerConnection>
+		<connection>scm:git:git://github.com/hansenjn/MotiQ/2D Analyzer</connection>
+		<developerConnection>scm:git:git@github.com:hansenjn/MotiQ/2D Analyzer</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/hansenjn/MotiQ/2D Analyzer/</url>
+		<url>https://github.com/hansenjn/MotiQ/2D Analyzer</url>
 	</scm>
  	
  	<issueManagement>
@@ -101,9 +101,6 @@
     </dependencies>  
     
     <build>
-        <directory>target</directory>
-    	<outputDirectory>target/classes</outputDirectory>
-    	<finalName>${artifactId}-${version}</finalName>
 		<plugins>
 			<!--         avoid errors in java doc creation -->			
 			<plugin>
